[package]
name = "newsapi-rust"
version = "0.1.0"
edition = "2024"
authors = ["Omnath Mandal omnathwk@gmail.com"]
description = "A robust async client for NewsAPI.org"
license = "MIT OR Apache-2.0"
repository = "https://github.com/htanmo/newsapi-rust"
readme = "README.md"
keywords = ["newsapi", "news", "api", "client", "async"]
categories = ["web-programming", "api-bindings"]
documentation = "https://docs.rs/newsapi-rust"
homepage = "https://github.com/htanmo/newsapi-rust"
include = ["src/", "LICENSE", "README.md"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.3", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
